@@ -2,10 +2,10 @@
 project(*idl) : tao_versioning_idl_defaults, install {
   custom_only = 1
   idlflags += -GX \
-              -Wb,stub_export_macro=TAO_IFR_Client_Export \
+              -Wb,stub_export_macro=TAO_IFR_CLIENT_Export \
               -Wb,stub_export_include=tao/IFR_Client/ifr_client_export.h \
               -Wb,stub_export_file=ifr_client_export.h \
-              -Wb,skel_export_macro=TAO_IFR_Client_Skel_Export \
+              -Wb,skel_export_macro=TAO_IFR_CLIENT_Skel_Export \
               -Wb,skel_export_include=tao/IFR_Client/ifr_client_skel_export.h \
               -Wb,skel_export_file=ifr_client_skel_export.h \
               -iC tao/IFR_Client -GT
